# computer-vision-environment

./: .gitignore  README.md  main.py  pyproject.toml
core/: constants.py
data_converters/: seg2boxes.py
data_visualizers/: seg_boxes_visualizer.py
engines/: yolo_engine.py
tools/: pytorch_platform_check.py
utils/: colors.py
