[project]
name = "computer-vision-environment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nibabel>=5.3.2",
    "notebook>=7.3.3",
    "polars>=1.26.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.3.102",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
